Minimum occurrenc cutoff for words. Fixes #35.